MNT: Updated some of the pinned versions

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,7 +8,7 @@ source:
   md5: be78e48cdfc1a7ad90efff146dce6cfe
 
 build:
-  number: 0
+  number: 1
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -20,21 +20,21 @@ build:
 requirements:
   build:
     - bzip2 1.0.*       # [unix]
-    - zlib 1.2*         # [unix]
+    - zlib 1.2.*         # [unix]
     - sqlite 3.9.*      # [unix]
-    - readline 6.2*     # [unix]
-    - tk 8.5*           # [unix]
-    - openssl 1.0*      # [unix]
+    - readline 6.2.*     # [unix]
+    - tk 8.5.*           # [unix]
+    - openssl 1.0.*      # [unix]
     - xz 5.0.*          # [unix]
-    - ncurses 5.9*      # [linux]
+    - ncurses 5.9.*      # [linux]
   run:
-    - zlib 1.2*         # [unix]
+    - zlib 1.2.*         # [unix]
     - sqlite 3.9.*      # [unix]
-    - readline 6.2*     # [unix]
-    - tk 8.5*           # [unix]
-    - openssl 1.0*      # [unix]
+    - readline 6.2.*     # [unix]
+    - tk 8.5.*           # [unix]
+    - openssl 1.0.*      # [unix]
     - xz 5.0.*          # [unix]
-    - ncurses 5.9*      # [linux]
+    - ncurses 5.9.*      # [linux]
 
 test:
   commands:
