--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ install:
       export PATH=/Users/travis/miniconda3/bin:$PATH
 
       conda update --yes conda
+      conda install --yes conda-build=1.20.0 jinja2 anaconda-client
       conda config --add channels conda-forge
-      conda install --yes conda-forge-build-setup
       
 
 script:
