--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ install:
 
       export PATH=/Users/travis/miniconda3/bin:$PATH
 
+      conda config --set show_channel_urls true
+      conda config --set add_pip_as_python_dependency false
       conda update --yes conda
       conda install --yes conda-build=1.20.0 jinja2 anaconda-client
       conda config --add channels conda-forge
