--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,9 @@ install:
 
       conda config --set show_channel_urls true
       conda update --yes conda
-      conda install --yes conda-build=1.20.0 jinja2 anaconda-client
       conda config --add channels conda-forge
+      conda install --yes conda-forge-build-setup
+      source activate root
       
 
 script:
