--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,11 +19,11 @@ environment:
     secure: MP4hZYylDyUWEsrt3u3cod2sbFeRwUziH02mvQOdbjsTO/l1yIxDkP/76rSIjcGC
 
   matrix:
-    - TARGET_ARCH: x86
-      CONDA_PY: 351
+    - TARGET_ARCH: "x86"
+      CONDA_PY: "35"
 
-    - TARGET_ARCH: x64
-      CONDA_PY: 351
+    - TARGET_ARCH: "x64"
+      CONDA_PY: "35"
 
 
 # We always use a 64-bit machine, but can build x86 distributions
