--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,11 +19,11 @@ environment:
     secure: MP4hZYylDyUWEsrt3u3cod2sbFeRwUziH02mvQOdbjsTO/l1yIxDkP/76rSIjcGC
 
   matrix:
-    - TARGET_ARCH: "x86"
-      CONDA_PY: "35"
+    - TARGET_ARCH: x86
+      CONDA_PY: 35
 
-    - TARGET_ARCH: "x64"
-      CONDA_PY: "35"
+    - TARGET_ARCH: x64
+      CONDA_PY: 35
 
 
 # We always use a 64-bit machine, but can build x86 distributions
@@ -49,9 +49,9 @@ install:
     - cmd: set PATH=%CONDA_INSTALL_LOCN%;%CONDA_INSTALL_LOCN%\scripts;%PATH%
     - cmd: set PYTHONUNBUFFERED=1
 
+    - cmd: conda config --add channels conda-forge
     - cmd: conda config --set show_channel_urls true
     - cmd: conda install -c pelson/channel/development --yes --quiet obvious-ci
-    - cmd: conda config --add channels conda-forge
     - cmd: conda info
     - cmd: conda install -n root --quiet --yes conda-build anaconda-client jinja2 setuptools
     # Workaround for Python 3.4 and x64 bug in latest conda-build.
