--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,10 +20,10 @@ environment:
 
   matrix:
     - TARGET_ARCH: x86
-      CONDA_PY: 35
+      CONDA_PY: 36
 
     - TARGET_ARCH: x64
-      CONDA_PY: 35
+      CONDA_PY: 36
 
 
 # We always use a 64-bit machine, but can build x86 distributions
@@ -53,7 +53,8 @@ install:
     - cmd: conda config --set show_channel_urls true
     - cmd: conda install -c pelson/channel/development --yes --quiet obvious-ci
     - cmd: conda info
-    - cmd: conda install -n root --quiet --yes conda-build anaconda-client jinja2 setuptools
+    - cmd: conda install -n root --quiet --yes conda-forge-build-setup setuptools
+    - cmd: activate
     # Workaround for Python 3.4 and x64 bug in latest conda-build.
     # FIXME: Remove once there is a release that fixes the upstream issue
     # ( https://github.com/conda/conda-build/issues/895 ).
