--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,9 +10,7 @@ source:
       - omit-local-site-packages.patch  # [osx]
 
 build:
-  number: 0  # [win]
-  number: 0  # [linux]
-  number: 1  # [osx]
+  number: 1
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
