--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,16 +1,16 @@
 package:
   name: python
-  version: 3.5.1
+  version: 3.5.2
 
 source:
-  fn: Python-3.5.1.tgz
-  url: https://www.python.org/ftp/python/3.5.1/Python-3.5.1.tgz
-  sha256: 687e067d9f391da645423c7eda8205bae9d35edc0c76ef5218dcbe4cc770d0d7
+  fn: Python-3.5.2.tgz
+  url: https://www.python.org/ftp/python/3.5.2/Python-3.5.2.tgz
+  sha256: 1524b840e42cf3b909e8f8df67c1724012c7dc7f9d076d4feef2d3eff031e8a0
   patches:
       - omit-local-site-packages.patch  # [osx]
 
 build:
-  number: 1
+  number: 0
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -22,20 +22,20 @@ build:
 requirements:
   build:
     - bzip2 1.0.*       # [unix]
-    - zlib 1.2*         # [unix]
-    - sqlite 3.9.*      # [unix]
+    - openssl 1.0.*     # [unix]
     - readline 6.2*     # [unix]
-    - tk 8.5*           # [unix]
-    - openssl 1.0*      # [unix]
-    - xz 5.0.*          # [unix]
+    - sqlite 3.13.*     # [unix]
+    - tk 8.5.*          # [unix]
+    - xz 5.2.*          # [unix]
+    - zlib 1.2.*        # [unix]
     - ncurses 5.9*      # [linux]
   run:
-    - zlib 1.2*         # [unix]
-    - sqlite 3.9.*      # [unix]
+    - openssl 1.0.*     # [unix]
     - readline 6.2*     # [unix]
-    - tk 8.5*           # [unix]
-    - openssl 1.0*      # [unix]
-    - xz 5.0.*          # [unix]
+    - sqlite 3.13.*     # [unix]
+    - tk 8.5.*          # [unix]
+    - xz 5.2.*          # [unix]
+    - zlib 1.2.*        # [unix]
     - ncurses 5.9*      # [linux]
 
 test:
