--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,10 +20,10 @@ environment:
 
   matrix:
     - TARGET_ARCH: x86
-      CONDA_PY: 35
+      CONDA_PY: 27
 
     - TARGET_ARCH: x64
-      CONDA_PY: 35
+      CONDA_PY: 27
 
 
 # We always use a 64-bit machine, but can build x86 distributions
@@ -58,6 +58,8 @@ install:
     # FIXME: Remove once there is a release that fixes the upstream issue
     # ( https://github.com/conda/conda-build/issues/895 ).
     - cmd: if "%TARGET_ARCH%" == "x64" if "%CONDA_PY%" == "34" conda install conda-build=1.20.0 --yes
+    # conda-build 1.21.5 does not run tests correctly
+    - cmd: conda install conda-build=1.20 --yes
 
 # Skip .NET project specific build phase.
 build: off
