--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,11 +1,11 @@
 package:
   name: python
-  version: 3.5.2
+  version: 2.7.12
 
 source:
-  fn: Python-3.5.2.tgz
-  url: https://www.python.org/ftp/python/3.5.2/Python-3.5.2.tgz
-  sha256: 1524b840e42cf3b909e8f8df67c1724012c7dc7f9d076d4feef2d3eff031e8a0
+  fn: Python-2.7.12.tgz
+  url: https://www.python.org/ftp/python/2.7.12/Python-2.7.12.tgz
+  sha256: 3cb522d17463dfa69a155ab18cffa399b358c966c0363d6c8b5b3bf1384da4b6
   patches:
       - omit-local-site-packages.patch  # [osx]
       - osx64-dist.patch                # [osx and x86_64]
@@ -13,31 +13,29 @@ source:
       - win-library_bin.patch           # [win]
 
 build:
-  number: 2
+  number: 0
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
     - DLLs/_ctypes.pyd  # [win]
     - bin/python3.5     # [unix]
   track_features:
-    - vc14              # [win]
+    - vc9               # [win]
 
 requirements:
   build:
     - bzip2 1.0.*       # [unix]
     - openssl 1.0.*     # [unix]
     - readline 6.2*     # [unix]
-    - sqlite 3.13.*     # [unix]
+    - sqlite 3.9.*      # [unix]
     - tk 8.5.*          # [unix]
-    - xz 5.2.*          # [unix]
     - zlib 1.2.*        # [unix]
     - ncurses 5.9*      # [linux]
   run:
     - openssl 1.0.*     # [unix]
     - readline 6.2*     # [unix]
-    - sqlite 3.13.*     # [unix]
+    - sqlite 3.9.*      # [unix]
     - tk 8.5.*          # [unix]
-    - xz 5.2.*          # [unix]
     - zlib 1.2.*        # [unix]
     - ncurses 5.9*      # [linux]
     - vs2015_runtime    # [win]
@@ -45,10 +43,9 @@ requirements:
 test:
   commands:
     - python -V
-    - python3 -V            # [unix]
-    - 2to3 -h
     - pydoc -h
-    - python3-config --help  # [unix]
+    - python-config --help  # [unix]
+    - idle -h
 
 about:
   home: http://www.python.org/
