--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,13 +3,13 @@ package:
   version: 1.0.1
 
 source: 
-  fn: python1.0.1.tar.gz
-  url: http://legacy.python.org/download/releases/src/python1.0.1.tar.gz
+  fn: python1.0.1.tar.gz  # [not osx]
+  url: http://legacy.python.org/download/releases/src/python1.0.1.tar.gz  # [not osx]
   sha256: 1ce4167d0a297a6f9cc74f9b8da53ff359d872c18bf10e98563c7ba4a5f9893b
   patches:
     # Modules/fileobject.c defines a getline function which conflicts with the
     # one in stdio.h, rename the function in the file to _getline
-    - fileobject_getline.patch
+    - fileobject_getline.patch  # [not osx]
 
 build:
   number: 0
