--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,8 @@ source:
     - Makefile.in_python_path.patch  # [osx]
     # The crypt library needs to be linked when compiling python
     - setup.in_lcrypt.patch  # [not osx]
+    # Remove definition of strdup in parsermode.c
+    - parsermodule.in_no_strdup.patch  # [linux]
 
 
 build:
