--- a/.travis.yml
+++ b/.travis.yml
@@ -39,4 +39,4 @@ script:
 
 after_success:
 
-  - ./ci_support/upload_or_check_non_existence.py ./recipe conda-forge --channel=main
+  - ./ci_support/upload_or_check_non_existence.py ./recipe conda-forge --channel=prerelease
