--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,4 +67,4 @@ test_script:
     - "%CMD_IN_ENV% conda build recipe --quiet"
 deploy_script:
 
-    - 'python ci_support\upload_or_check_non_existence.py .\recipe conda-forge --channel=main'
+    - 'python ci_support\upload_or_check_non_existence.py .\recipe conda-forge --channel=prerelease'
