--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,8 +17,8 @@ build:
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
-    - DLLs/_ctypes.py   # [win]
-    - bin/python
+    - DLLs/_ctypes.pyd  # [win]
+    - bin/python3.5     # [unix]
   track_features:
     - vc14              # [win]
 
