--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,11 +14,9 @@ source:
 
 build:
   number: 1
-  # Windows has issues updating python if conda is using files itself.
-  # Copy rather than link.
   no_link:
-    - DLLs/_ctypes.py   # [win]
-    - bin/python
+    - bin/python3.4     # [unix]
+    - DLLs/_ctypes.pyd  # [win]
   track_features:
     - vc10              # [win]
 
