--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
       - omit-local-site-packages.patch  # [osx]
       - osx-dist.patch                  # [osx and x86_64]
       - win-find_exe.patch              # [win]
+      - win-library_bin.patch           # [win]
 
 build:
   number: 0
