--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,11 +1,11 @@
 package:
   name: python
-  version: 1.4
+  version: 1.5.2
 
 source: 
-  fn: python-1.4.tar.gz
-  url: http://legacy.python.org/download/releases/src/python-1.4.tar.gz
-  sha256: 6c551f79810ac679a8049fdf04d0c20ace2a7117da3dda2f0020ab692a27f1fb
+  fn: python-1.5.tar.gz
+  url: http://legacy.python.org/download/releases/src/python-1.5.2.tar.gz
+  sha256: c6651472e64b177bd71f5ade29b65b784faa7ca121430d735f6426bc52ab6265
   patches:
     # Modules/fileobject.c defines a getline function which conflicts with the
     # one in stdio.h, rename the function in the file to _getline
@@ -13,11 +13,6 @@ source:
     # OS X uses a file insensitive filesystem so the python binary is not
     # copied out of the Python directory, adjust the Makefile for this
     - Makefile.in_python_path.patch  # [osx]
-    # The crypt library needs to be linked when compiling python
-    - setup.in_lcrypt.patch  # [not osx]
-    # Remove definition of strdup in parsermode.c
-    - parsermodule.in_no_strdup.patch  # [linux]
-
 
 build:
   number: 0
@@ -28,13 +23,13 @@ build:
 
 test:
   commands:
+    - python -c "import sys; print sys.version"
+    - python1.5 -c "import sys; print sys.version"
     - python -c "import sys; print sys.path"
-    - python1.4 -c "import sys; print sys.path"
     # struct is a compiled module
     - python -c "import struct"
     # os is a python module, import will fail if sys.path is incorrect
     - python -c "import os"
-    - python -c "import sys; print sys.version"
 
 about:
   home: http://www.python.org/
