--- a/recipe/Makefile.in_python_path.patch
+++ b/recipe/Makefile.in_python_path.patch
@@ -1,6 +1,6 @@
---- Makefile.in.orig	2016-07-04 09:09:18.000000000 -0500
-+++ Makefile.in	2016-07-04 09:12:30.000000000 -0500
-@@ -266,7 +266,7 @@
+--- Makefile.in.orig	2016-07-04 12:09:05.000000000 -0500
++++ Makefile.in	2016-07-04 12:08:35.000000000 -0500
+@@ -236,7 +236,7 @@
  			else	true; \
  			fi; \
  		done
@@ -9,12 +9,12 @@
  		if test -f libpython$(VERSION).so; then \
  			$(INSTALL_DATA) libpython$(VERSION).so $(LIBDIR); \
  		else	true; \
-@@ -346,15 +346,15 @@
+@@ -317,15 +317,15 @@
  			done; \
  		done
  		PYTHONPATH=$(LIBDEST) \
--			./python$(EXE) $(LIBDEST)/compileall.py $(LIBDEST)
-+			./Python/python$(EXE) $(LIBDEST)/compileall.py $(LIBDEST)
+-			./python$(EXE) -t $(LIBDEST)/compileall.py $(LIBDEST)
++			./Python/python$(EXE) -t $(LIBDEST)/compileall.py $(LIBDEST)
  		PYTHONPATH=$(LIBDEST) \
 -			./python$(EXE) -O $(LIBDEST)/compileall.py $(LIBDEST)
 +			./Python/python$(EXE) -O $(LIBDEST)/compileall.py $(LIBDEST)
