Use jinja template for version number and sha256

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,11 +1,14 @@
+{% set version = "2.7.12" %}
+{% set sha256 = "3cb522d17463dfa69a155ab18cffa399b358c966c0363d6c8b5b3bf1384da4b6" %}
+
 package:
   name: python
-  version: 2.7.12
+  version: {{ version }}
 
 source:
-  fn: Python-2.7.12.tgz
-  url: https://www.python.org/ftp/python/2.7.12/Python-2.7.12.tgz
-  sha256: 3cb522d17463dfa69a155ab18cffa399b358c966c0363d6c8b5b3bf1384da4b6
+  fn: Python-{{ version }}.tgz
+  url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}.tgz
+  sha256: {{ sha256 }}
   patches:
       - omit-local-site-packages.patch  # [osx]
       - osx-dist.patch                  # [osx and x86_64]
