Add python-debug build feature

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,8 @@ build:
     - vc14              # [win]
   script_env:
     - python_branding
+  features:
+    - python-debug
 
 requirements:
   build:
