--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,6 +63,9 @@ install:
     - cmd: conda install -n root --quiet --yes conda-forge-build-setup
     - cmd: run_conda_forge_build_setup
 
+    # Install conda-build 2.x
+    - cmd: conda install -n root --quiet --yes conda-build=2
+
 # Skip .NET project specific build phase.
 build: off
 
