--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,10 +1,13 @@
+{% set version = "3.5.2" %}
+{% set short_ver = ".".join(version.split(".")[:2]) %}
+
 package:
   name: python
-  version: 3.5.2
+  version: {{ version }}
 
 source:
-  fn: Python-3.5.2.tgz
-  url: https://www.python.org/ftp/python/3.5.2/Python-3.5.2.tgz
+  fn: Python-{{ version }}.tgz
+  url: https://www.python.org/ftp/python/{{ version }}/Python-{{ version }}.tgz
   sha256: 1524b840e42cf3b909e8f8df67c1724012c7dc7f9d076d4feef2d3eff031e8a0
   patches:
       - omit-local-site-packages.patch  # [osx]
@@ -17,8 +20,8 @@ build:
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
-    - DLLs/_ctypes.pyd  # [win]
-    - bin/python3.5     # [unix]
+    - DLLs/_ctypes.pyd           # [win]
+    - bin/python{{ short_ver }}  # [unix]
   track_features:
     - vc14              # [win]
   script_env:
