Test the idle script.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -54,6 +54,7 @@ test:
     - 2to3 -h
     - pydoc -h
     - python3-config --help  # [unix]
+    - idle -h
 
 about:
   home: http://www.python.org/
