--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,6 +39,7 @@ requirements:
     - tk 8.5.*          # [unix]
     - zlib 1.2.*        # [unix]
     - ncurses 5.9*      # [linux]
+    - xz                # [win]
   run:
     - openssl 1.0.*     # [unix]
     - readline 6.2*     # [unix]
