--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,6 +17,7 @@ source:
 
 build:
   number: 0
+  skip: true            # [win]
   no_link:
     - bin/python2.6     # [unix]
     - DLLs/_ctypes.pyd  # [win]
