--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,9 +21,10 @@ source:
     - fd_setsize.patch                # [win]
     - mingw-w64--DMS_WINXX.patch
     - win-msc_ver-1900.patch
+    - fix-ABI-issue29943.patch
 
 build:
-  number: 2
+  number: 3
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
