download and extract external deps in bld.bat
Download and unpack external windows dependencies in bld.bat script
rather than depending on the logic in build.bat to perform this
function.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ source:
     - mingw-w64--DMS_WINXX.patch
     - win-msc_ver-1900.patch
     - fix-ABI-issue29943.patch
+    - do-not-download-externals.patch  # [win]
 
 build:
   number: 0
@@ -37,7 +38,9 @@ build:
 
 requirements:
   build:
+    - 7za               # [win]
     - bzip2 1.0.*       # [unix]
+    - curl              # [win]
     - openssl 1.0.*     # [unix]
     - readline 6.2*     # [unix]
     - sqlite 3.13.*     # [unix]
