--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,7 @@ source:
     - do-not-download-externals.patch  # [win]
 
 build:
-  number: 0
+  number: 1
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -45,7 +45,7 @@ requirements:
     - sqlite 3.13.*     # [unix]
     - tk 8.5.*          # [unix]
     - xz 5.2.*          # [unix]
-    - zlib 1.2.8        # [unix]
+    - zlib 1.2.11        # [unix]
     - ncurses 5.9*      # [linux]
   run:
     - openssl 1.0.*     # [unix]
@@ -53,7 +53,7 @@ requirements:
     - sqlite 3.13.*     # [unix]
     - tk 8.5.*          # [unix]
     - xz 5.2.*          # [unix]
-    - zlib 1.2.8        # [unix]
+    - zlib 1.2.11        # [unix]
     - ncurses 5.9*      # [linux]
     - vs2015_runtime    # [win]
 
@@ -64,8 +64,8 @@ test:
     - 2to3 -h
     - pydoc -h
     - python3-config --help  # [unix]
-    - conda inspect linkages -p $PREFIX python  # [not win]
-    - conda inspect objects -p $PREFIX python  # [osx]
+    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
+    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
 
 about:
   home: http://www.python.org/
