--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -62,6 +62,8 @@ test:
     - 2to3 -h
     - pydoc -h
     - python3-config --help  # [unix]
+    - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
+    - conda inspect objects -p $PREFIX $PKG_NAME  # [osx]
 
 about:
   home: http://www.python.org/
