Try a fix for winsdk error

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,7 @@ source:
     - fix-ABI-issue29943.patch
     - do-not-download-externals.patch  # [win]
     - 0015-Fix-find_library-so-that-it-looks-in-sys.prefix-lib-.patch
+    - winsdk.patch
 
 build:
   number: 0
